# Ease-Mind

./: .env  .gitattributes  .gitignore  .gitlab-ci.yml  README.md  app.db  appspec.yml  babel.config.js  canopy.db  canopy_test.db  config.py  create_admin_login.py  cypress.config.js  larks.pem  package-lock.json  package.json  pytest.ini  requirements-m1-working.txt  requirements.txt  requires.cfg  setup.cfg  temp.js  test.db  zip.py
backend/: .gitignore  .gitlab-ci.yml  README.md  app.db-journal  canopy.db  canopy_test.db  config.py  load_test.yml  requirements-EaseMind.txt  requirements-m1-working.txt  requirements.txt  run.py  setup.cfg
backend/app/: __init__.py  endpoints.py  forms.py  models.py  views.py
backend/app/AutismDetector/: AutismDetector.py  AutismDetectorModel.ipynb  Dataset.py  EyeTracking.ipynb  splittingmodel.py  synthetic_dataset_with_notes.json  tfidf_vectorizer.joblib
backend/app/EaseMind/: EaseMind.py  ReadMe.md  Sentiment_analysis_model.py  model_predict.py  test.py  tokenizer.pickle
backend/app/alex/: alex.py
backend/app/depressiLess/: DepressiLess.py  text_analysis.py
backend/app/kevin/: kevin.py
backend/app/lanre/: lanre.py
backend/app/ramat/: ramat.py  speech_model.h5
backend/app/rootsRadar/: IMPORT-MIMIC-DATA-TO-DB.ipynb  MAKE_MODEL_FROM_NEW_DB.ipynb  classifier-AdaBoost-joblib-dump.joblib  classifier-DecisionTree-joblib-dump.joblib  classifier-LinearSVM-joblib-dump.joblib  classifier-NaiveBayes-joblib-dump.joblib  getDataIntoDB.ipynb  (+19 more)
backend/scripts/: create_admin_login.py  create_database.py
backend/tests/: conftest.py
(+451 files in other folders)
