[metadata]
name = larks_final_project
version = 0.0.1
author = larks
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
include_package_data = True

[options]
zip_safe = False
install_requires =
    Flask
    opencv-python-headless>=4.6.0.66
packages = find:

[options.packages.find] 
exclude= 
    aws.*
    aws*

[options.extras_require]
dev = 
    flake8==4.0.1

[options.package_data]
example = *.pem, *.txt

[tool:pytest]
markers =
    unit: mark a test as a unit test.
    functional: mark a test as a functional test.